[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hilltop-py"
version = '2.3.1'
description = "Functions to access Hilltop data"
requires-python = ">=3.8"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    { name = "Mike Kittridge", email = "mullenkamp1@gmail.com" },
]
keywords = [
    "hilltop",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "orjson",
    "pandas",
    "pydantic<2",
    "requests",
]

[project.optional-dependencies]
dev = [
  "spyder-kernels==2.4",
  "matplotlib",
  "pytest",
]

[project.urls]
Homepage = "https://github.com/mullenkamp/hilltop-py"

[tool.hatch.build.targets.sdist]
include = [
    "/hilltoppy",
]
